--- a/src/pc.rc
+++ b/src/pc.rc
@@ -50,8 +50,9 @@ BEGIN
     COMBOBOX        IDC_COMBOSPD,62,116,107,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBOSND,62,136,107,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBOMEM,62,152,107,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Game Blaster",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,172,118,10
-    CONTROL         "Composite CGA",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,188,118,10
+    CONTROL         "CMS / Game Blaster",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,172,118,10
+    CONTROL         "Gravis Ultrasound",IDC_CHECKGUS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,188,118,10    
+    CONTROL         "Composite CGA",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,204,118,10
     LTEXT           "Machine :",IDC_STATIC,15,16,40,10
     LTEXT           "Video :",IDC_STATIC,15,36,34,10
     LTEXT           "CPU type :",IDC_STATIC,15,56,34,10
@@ -150,9 +151,5 @@ BEGIN
     LTEXT           "6",IDC_STEXT6,16,76,180,10
     LTEXT           "7",IDC_STEXT7,16,88,180,10
     LTEXT           "8",IDC_STEXT8,16,100,180,10
-    LTEXT           "9",IDC_STEXT9,16,112,180,10
-    LTEXT           "10",IDC_STEXT10,16,124,180,10
-    LTEXT           "11",IDC_STEXT11,16,136,180,10
-    LTEXT           "12",IDC_STEXT12,16,148,180,10
-    LTEXT           "13",IDC_STEXT13,16,160,180,10
+    LTEXT           "9",IDC_STEXT_DEVICE,16,112,180,1000
 END
