Devices can now be marked as not working, and disabled in release builds. Video card menu now build dynamically from list.

--- a/src/pc.rc
+++ b/src/pc.rc
@@ -46,7 +46,7 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,17,216,50,14, WS_TABSTOP
     PUSHBUTTON      "Cancel",IDCANCEL,71,216,50,14, WS_TABSTOP
     COMBOBOX        IDC_COMBO1,62,16,107,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO2,62,36,107,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBOVID,62,36,107,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBOCPUM,62,56,107,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBO3,62,76,107,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBOCHC,62,96,107,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
