--- a/src/Makefile.mingw
+++ b/src/Makefile.mingw
@@ -4,7 +4,7 @@ CC   = gcc.exe
 WINDRES = windres.exe
 CFLAGS = -O3 -march=i686 -fomit-frame-pointer
 OBJ = 386.o 808x.o acer386sx.o ali1429.o amstrad.o cdrom-ioctl.o \
-	config.o cpu.o dac.o device.o dma.o ega.o fdc.o \
+	config.o cpu.o dac.o device.o dma.o fdc.o \
 	headland.o i430vx.o ide.o io.o jim.o keyboard.o keyboard_amstrad.o keyboard_at.o \
 	keyboard_olim24.o keyboard_pcjr.o keyboard_xt.o lpt.o mcr.o mem.o model.o \
 	mouse.o mouse_ps2.o mouse_serial.o neat.o nvr.o olivetti_m24.o \
