--- a/src/pc.rc
+++ b/src/pc.rc
@@ -77,19 +77,20 @@ BEGIN
     LTEXT           "Memory :",IDC_STATIC,15,156,40,10
 END
 
-HdConfDlg DIALOGEX 0, 0, 186, 172
+HdConfDlg DIALOGEX 0, 0, 210, 172
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Configure Hard Discs"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,31,152,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,101,152,50,14
+    DEFPUSHBUTTON   "OK",IDOK,31+12,152,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,101+12,152,50,14
     
     LTEXT           "C:",IDC_STATIC,7,6,27,10
     EDITTEXT        IDC_EDITC, 7, 22, 136, 12, WS_DISABLED
     PUSHBUTTON      "...",IDC_CFILE,7 + 136,      22, 16, 14
     PUSHBUTTON      "New",IDC_CNEW,7 + 136 + 16, 22, 24, 14
-    
+    PUSHBUTTON      "Eject", IDC_EJECTC, 7 + 136 + 16 + 24, 22, 24, 14
+        
     EDITTEXT        IDC_EDIT1,36,38,16,12, WS_DISABLED
     EDITTEXT        IDC_EDIT2,94,38,16,12, WS_DISABLED
     EDITTEXT        IDC_EDIT3,152,38,28,12, WS_DISABLED
@@ -102,6 +103,7 @@ BEGIN
     EDITTEXT        IDC_EDITD, 7, 92, 136, 12, WS_DISABLED
     PUSHBUTTON      "...",IDC_DFILE,7 + 136,     92, 16, 14
     PUSHBUTTON      "New",IDC_DNEW,7 + 136 + 16, 92, 24, 14
+    PUSHBUTTON      "Eject", IDC_EJECTD, 7 + 136 + 16 + 24, 92, 24, 14
     
     EDITTEXT        IDC_EDIT4,36,108,16,12, WS_DISABLED
     EDITTEXT        IDC_EDIT5,94,108,16,12, WS_DISABLED
