S3D optimisations - between 15% and 30% faster on my machine.

--- a/src/pc.rc
+++ b/src/pc.rc
@@ -155,7 +155,7 @@ BEGIN
     LTEXT           "", IDC_TEXT1, 7, 38, 136, 12
 END
 
-StatusDlg DIALOGEX 0,0,186,186
+StatusDlg DIALOGEX 0,0,186,186+20
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Status"
 FONT 8, "MS Sans Serif"
