Reorganised Windows-specific code a bit.

--- a/src/pc.rc
+++ b/src/pc.rc
@@ -87,32 +87,32 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,101+12,152,50,14
     
     LTEXT           "C:",IDC_STATIC,7,6,27,10
-    EDITTEXT        IDC_EDITC, 7, 22, 136, 12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_C_FN, 7, 22, 136, 12, WS_DISABLED
     PUSHBUTTON      "...",IDC_CFILE,7 + 136,      22, 16, 14
     PUSHBUTTON      "New",IDC_CNEW,7 + 136 + 16, 22, 24, 14
     PUSHBUTTON      "Eject", IDC_EJECTC, 7 + 136 + 16 + 24, 22, 24, 14
         
-    EDITTEXT        IDC_EDIT1,36,38,16,12, WS_DISABLED
-    EDITTEXT        IDC_EDIT2,94,38,16,12, WS_DISABLED
-    EDITTEXT        IDC_EDIT3,152,38,28,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_C_SPT,36,38,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_C_HPC,94,38,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_C_CYL,152,38,28,12, WS_DISABLED
     LTEXT           "Sectors:",IDC_STATIC,7,38,27,10
     LTEXT           "Heads:",IDC_STATIC,63,38,29,8
     LTEXT           "Cylinders:",IDC_STATIC,120,38,32,12
-    LTEXT           "", IDC_TEXT1, 7, 54, 136, 12
+    LTEXT           "", IDC_TEXT_C_SIZE, 7, 54, 136, 12
     
     LTEXT           "D:",IDC_STATIC,7,76,27,10
-    EDITTEXT        IDC_EDITD, 7, 92, 136, 12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_D_FN, 7, 92, 136, 12, WS_DISABLED
     PUSHBUTTON      "...",IDC_DFILE,7 + 136,     92, 16, 14
     PUSHBUTTON      "New",IDC_DNEW,7 + 136 + 16, 92, 24, 14
     PUSHBUTTON      "Eject", IDC_EJECTD, 7 + 136 + 16 + 24, 92, 24, 14
     
-    EDITTEXT        IDC_EDIT4,36,108,16,12, WS_DISABLED
-    EDITTEXT        IDC_EDIT5,94,108,16,12, WS_DISABLED
-    EDITTEXT        IDC_EDIT6,152,108,28,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_D_SPT,36,108,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_D_HPC,94,108,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_D_CYL,152,108,28,12, WS_DISABLED
     LTEXT           "Sectors:",IDC_STATIC,7,108,27,10
     LTEXT           "Heads:",IDC_STATIC,63,108,29,8
     LTEXT           "Cylinders:",IDC_STATIC,120,108,32,12
-    LTEXT           "", IDC_TEXT2, 7, 124, 136, 12    
+    LTEXT           "", IDC_TEXT_D_SIZE, 7, 124, 136, 12    
     
 END
 
@@ -160,13 +160,5 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Status"
 FONT 8, "MS Sans Serif"
 BEGIN
-    LTEXT           "1",IDC_STEXT1,16,16,180,10
-    LTEXT           "2",IDC_STEXT2,16,28,180,10
-    LTEXT           "3",IDC_STEXT3,16,40,180,10
-    LTEXT           "4",IDC_STEXT4,16,52,180,10
-    LTEXT           "5",IDC_STEXT5,16,64,180,10
-    LTEXT           "6",IDC_STEXT6,16,76,180,10
-    LTEXT           "7",IDC_STEXT7,16,88,180,10
-    LTEXT           "8",IDC_STEXT8,16,100,180,10
-    LTEXT           "9",IDC_STEXT_DEVICE,16,112,180,1000
+    LTEXT           "1",IDC_STEXT_DEVICE,16,16,180,1000
 END
