--- a/src/Makefile.mingw
+++ b/src/Makefile.mingw
@@ -2,7 +2,7 @@ VPATH = . dosbox resid-fp
 CPP  = g++.exe
 CC   = gcc.exe
 WINDRES = windres.exe
-CFLAGS = -O3 -march=i686 -fomit-frame-pointer -DDYNAREC
+CFLAGS = -O3 -march=i686 -fomit-frame-pointer
 OBJ = 386.o 386_dynarec.o 386_dynarec_ops.o 808x.o acer386sx.o ali1429.o amstrad.o cdrom-ioctl.o \
 	codegen_x86.o config.o cpu.o dac.o device.o dma.o fdc.o gameport.o \
 	headland.o i430vx.o ide.o io.o jim.o keyboard.o keyboard_amstrad.o keyboard_at.o \
