Added menu option to send CTRL-ALT-DELETE to emulated machine. Patch from GeeDee.

--- a/src/pc.rc
+++ b/src/pc.rc
@@ -6,6 +6,7 @@ BEGIN
         POPUP "&File"
         BEGIN
                 MENUITEM "&Hard Reset",           IDM_FILE_HRESET
+                MENUITEM "&Ctrl+Alt+Del",         IDM_FILE_RESET_CAD
                 MENUITEM "E&xit",                 IDM_FILE_EXIT
         END
         POPUP "&Disc"
