Added usable 3DFX emulation.

--- a/src/pc.rc
+++ b/src/pc.rc
@@ -51,13 +51,13 @@ BEGIN
         END
 END
 
-ConfigureDlg DIALOGEX 0, 0, 232+40, 256
+ConfigureDlg DIALOGEX 0, 0, 232+40, 272
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Configure PCem"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,64,232,50,14, WS_TABSTOP
-    PUSHBUTTON      "Cancel",IDCANCEL,128,232,50,14, WS_TABSTOP
+    DEFPUSHBUTTON   "OK",IDOK,64,248,50,14, WS_TABSTOP
+    PUSHBUTTON      "Cancel",IDCANCEL,128,248,50,14, WS_TABSTOP
     COMBOBOX        IDC_COMBO1,62,16,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBOVID,62,36,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Configure", IDC_CONFIGUREVID, 224, 36, 40, 14, WS_TABSTOP
@@ -74,6 +74,8 @@ BEGIN
     CONTROL         "Gravis Ultrasound",IDC_CHECKGUS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,188,118,10    
     CONTROL         "Innovation SSI-2001",IDC_CHECKSSI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,204,118,10
     CONTROL         "Composite CGA",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,220,118,10
+    CONTROL         "Voodoo Graphics",IDC_CHECKVOODOO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,236,118,10
+    PUSHBUTTON      "Configure", IDC_CONFIGUREVOODOO, 224, 236, 40, 14, WS_TABSTOP
     LTEXT           "Machine :",IDC_STATIC,15,16,40,10
     LTEXT           "Video :",IDC_STATIC,15,36,34,10
     LTEXT           "CPU type :",IDC_STATIC,15,56,34,10
@@ -161,10 +163,11 @@ BEGIN
     LTEXT           "", IDC_TEXT1, 7, 38, 136, 12
 END
 
-StatusDlg DIALOGEX 0,0,186,186+20
+StatusDlg DIALOGEX 0,0,186,186+20+180
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Status"
 FONT 8, "MS Sans Serif"
 BEGIN
     LTEXT           "1",IDC_STEXT_DEVICE,16,16,180,1000
+    LTEXT           "1",IDC_STEXT1,16,186,180,1000
 END
